lab-26-09-24/ingress/example/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rancher-logo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: rancher
  template:
    metadata:
      labels:
        app: rancher
    spec:
      containers:
      - name: rancher
        image: ruanbekker/logos:rancher
        ports:
        - containerPort: 80
