lab-26-09-24/ingress/example/ingress.yaml
# some ingress controllers 
# Nginx, Traefik, HAproxy, Contour, Contrôleur ingress GKE pour GKE, Contrôleur ingress AWS ALB pour AKS, Contrôleur ingress de passerelle d'application azure
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rancher-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
  - secretName: rancher-logo-secret-tls
    hosts:
    - rancherlogo.kube.monlabo.de
  rules:
  - host: rancherlogo.kube.monlabo.de
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: rancher
              port:
                number: 80
